--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,10 @@ img {
   vertical-align: middle;
 }
 
+.main {
+  padding-top: 120px;
+}
+
 .app {
   width: 100%;
   height: 100%;
@@ -55,6 +59,48 @@ img {
   width: 100%;
   flex-grow: 1;
   position: relative;
+  overflow: scroll;
+}
+
+/*Navbar*/
+.navbar-wrapper {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  padding: 40px 0 40px 0;
+  align-items: center;
+  -webkit-box-align: center;
+  z-index: 1000;
+}
+
+.nav-expand {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.navbar-cont {
+  padding: 0 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: space-between;
+}
+
+.navbarLinks {
+  display: flex;
+  gap: 30px;
+}
+
+.nav-item {
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+.nav-item.tool {
+  color: gray;
 }
 
 /*Product page*/
@@ -76,7 +122,9 @@ img {
 
 .prod-inner {
   display: grid;
-  grid-template-columns: repeat(2, minmax(calc(50% - 30px), 1fr));
+  /*grid-template-columns: repeat(2, minmax(calc(50% - 30px), 1fr)); */
+  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fill, minmax(425px, 1fr));
 }
 
 .prod-inner {
@@ -174,7 +222,6 @@ img {
 .atc-btn {
   width: 50%;
   display: flex;
-  justify-content: end;
 }
 
 .atc-btn button {
@@ -259,6 +306,17 @@ img {
   margin-bottom: 0;
 }
 
+.item-li {
+  width: 27px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid transparent;
+}
+.item-li:hover {
+  border-bottom: 1px solid black;
+}
+
 a,
 .entry {
   color: #000;
@@ -275,33 +333,64 @@ h2 {
     -webkit-box-shadow 0.15s ease-in-out;
   vertical-align: middle;
 }
-/*
-@media (min-width: 1366px) .container,
-  .container-sm,
-  .container-md,
-  .container-lg,
-  .container-xl {
-  max-width: 70vw;
-  margin-left: auto;
-  margin-right: auto;
+
+.uln {
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, boxshadow 0.15s ease-in-out,
+    -webkit-box-shadow 0.15s ease-in-out;
+  vertical-align: middle;
 }
-@media (min-width: 1024px) .container,
-  .container-sm,
-  .container-md,
-  .container-lg {
-  max-width: 960px;
+
+.uln.b:hover {
+  border-bottom: 1px solid #000;
 }
-@media (min-width: 768px) .container, .container-sm, .container-md {
-  max-width: 720px;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin-left: 0;
-  margin-right: 0;
+
+.uln.g:hover {
+  border-bottom: 1px solid gray;
 }
-@media (min-width: 576px) .container, .container-sm {
-  max-width: 540px;
+
+/*Footer*/
+.footer {
+  border-top: 1.5px solid lightgray;
+  padding: 50px 0 50px 0;
+  position: relative;
+  background-color: white;
 }
-*/
+
+.footer-row {
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.footer-cont,
+.footer-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-list {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  column-gap: 50px;
+}
+
+.footer-item {
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 200;
+}
+
+@media (min-width: 900px) {
+}
+
+@media (min-width: 1024px) {
+  .product-container {
+    max-width: 960px;
+  }
+}
 
 @media (min-width: 1366px) {
   .product-container {
@@ -311,7 +400,73 @@ h2 {
   }
 }
 
+@media (min-width: 1600px) {
+  .product-container {
+    max-width: 55vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .related-dummy {
   width: 938.55px;
   height: 397.3px;
+}
+
+@media (max-width: 450px) {
+  .footer {
+    padding: 25px 0 25px 0;
+  }
+
+  .footer-row {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media (max-width: 576px) {
+  .product-container {
+    max-width: 540px;
+  }
+}
+
+@media (max-width: 900px) {
+  /*turn navbar into burger menu*/
+
+  .product-container {
+    max-width: 720px;
+  }
+
+  .image-slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0px;
+    overflow: scroll;
+  }
+
+  .prod-inner {
+  }
+
+  .left-side {
+  }
+
+  .right-side {
+    padding-left: 0px;
+  }
+
+  .footer {
+    padding: 25px 0 25px 0;
+  }
+
+  .footer-list {
+    column-gap: 20px;
+    justify-content: center;
+  }
+
+  .footer-row {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
