--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,7 @@ img {
 
 .main {
   padding-top: 120px;
+  padding-bottom: 50px;
 }
 
 .app {
@@ -196,6 +197,10 @@ img {
   flex-basis: 100%;
 }
 
+.size-label {
+  margin-bottom: 10px;
+}
+
 .atc-btn {
   width: 50%;
   display: flex;
@@ -285,11 +290,13 @@ img {
 }
 
 .item-li {
-  width: 27px;
-  height: 24px;
+  width: 32px;
+  height: 30px;
   display: flex;
   justify-content: center;
   border-bottom: 1px solid transparent;
+  padding: 2px;
+  margin: 4px;
 }
 .item-li:hover {
   border-bottom: 1px solid black;
@@ -327,6 +334,103 @@ h2 {
   border-bottom: 1px solid gray;
 }
 
+/*related products*/
+.related-prodycs {
+  margin-top: 70px;
+  width: 100%;
+  max-width: 100%;
+}
+
+.r-p-h {
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 18px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+.r-p-h h2 {
+  line-height: 1.2;
+}
+
+.r-p-ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+}
+
+/* 676???
+.r-p-li {
+  width: calc(25% - (30px * 3 / 4) + ((40px / 4) / 2));
+  height: 100%;
+  min-width: calc(25% - (30px * 3 / 4) + ((40px / 4) / 2));
+  flex-basis: calc(25% - (30px * 3 / 4) + ((40px / 4) / 2));
+}*/
+
+.r-p-li {
+  width: calc(50% - (20px / 2));
+  height: 100%;
+  min-width: calc(50% - (20px / 2));
+  flex-basis: calc(50% - (20px / 2));
+}
+
+.r-p-li:first-child {
+  margin-right: calc(20px / 2);
+  margin-left: 0;
+}
+
+.r-p-li {
+  margin-right: calc(20px / 2);
+  margin-left: calc(20px / 2);
+}
+
+.r-p-li:last-child {
+  margin-left: calc(20px / 2);
+  margin-right: 0;
+}
+
+.r-p-content {
+}
+
+.r-p-img-cont {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 2/3;
+  overflow: hidden;
+}
+
+.r-p.box {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+
+  margin-bottom: 10px;
+}
+
+.r-p-fc {
+  display: flex;
+  position: absolute;
+  left: 0;
+  bottom: -80px;
+  transition: all 0.3s ease-out;
+  z-index: 100;
+}
+
+.r-p-fc {
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 100%;
+  padding: 4px 10px;
+  height: 80px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.r-p.box:hover .r-p-fc {
+  bottom: 0;
+}
 /*Footer*/
 .footer {
   border-top: 1.5px solid lightgray;
@@ -383,9 +487,19 @@ h2 {
   .image-slider .image-slider-item {
     width: inherit;
   }
+
+  .r-p-fc {
+    padding: 5px 10px;
+    height: 60px;
+    bottom: -60px;
+  }
 }
 
 @media (min-width: 1024px) {
+  .main {
+    padding-bottom: 120px;
+  }
+
   .product-container {
     max-width: 960px;
   }
@@ -432,6 +546,21 @@ h2 {
   .right-side {
     padding-left: 30px;
   }
+
+  .r-p-li:first-child {
+    margin-right: calc((40px * 2 / 3) / 2);
+    margin-left: 0;
+  }
+
+  .r-p-li {
+    margin-right: calc((40px * 2 / 3) / 2);
+    margin-left: calc((40px * 2 / 3) / 2);
+  }
+
+  .r-p-li:last-child {
+    margin-left: calc((40px * 2 / 3) / 2);
+    margin-right: 0;
+  }
 }
 
 @media (min-width: 1366px) {
@@ -439,6 +568,21 @@ h2 {
     max-width: 70vw;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .r-p-li:first-child {
+    margin-right: calc(((30px * 3 / 4) / 2) + ((40px / 4) / 2));
+    margin-left: 0;
+  }
+
+  .r-p-li {
+    margin-right: calc(((30px * 3 / 4) / 2) + ((40px / 4) / 2));
+    margin-left: calc(((30px * 3 / 4) / 2) + ((40px / 4) / 2));
+  }
+
+  .r-p-li:last-child {
+    margin-left: calc(((30px * 3 / 4) / 2) + ((40px / 4) / 2));
+    margin-right: 0;
   }
 }
 
