--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -881,3 +881,215 @@ h2 {
 .form-group:focus-within {
   transform: scale(1.01, 1.01);
 }*/
+
+/*Tissue-box*/
+.tissue-box-wrapper {
+  /*height: 300px;*/
+  max-width: 940px;
+  margin: auto;
+}
+
+.tissue-box-cont {
+  width: 100%;
+  aspect-ratio: 3 / 1;
+  /*height: 100%;*/
+  display: flex;
+  position: relative;
+}
+
+.tissue-box-label {
+  /*width: 15%;*/
+  width: calc(100% / 5.854);
+  height: 100%;
+  /*background-color: blue;*/
+  flex-shrink: 0;
+  position: relative;
+  padding: 1%;
+}
+
+.tb-l-cont {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.tb-l-c-inner-outline {
+  border: black solid 1px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tb-l-c-title {
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  height: max-content;
+  font-weight: 600;
+}
+
+.tb-l-c-title {
+  font-size: 24px;
+}
+
+.tissue-box-content-wrap {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 1% 1% 1% 0;
+}
+
+/*transfering the same 1% to the gap*/
+.tissue-box-content-wrap .pis-item {
+  gap: 1%;
+}
+
+.eee {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+.tissue-box-content-cont {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+.prog-init-slider {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+}
+
+/*dont want items to shrink in container*/
+.pis-item-wrap {
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
+}
+
+.pis-item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.pis-image {
+  /*width: 33.3%;*/
+  aspect-ratio: 1;
+  position: relative;
+  border: black solid 1px;
+}
+
+.pis-text {
+  border: black solid 1px;
+  flex: 1;
+  padding: 2%;
+}
+
+.pis-text {
+  line-height: 1.2;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+.spacer {
+  width: 20%;
+  height: 100%;
+  flex-shrink: 0;
+}
+
+.pis-t-flex {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: flex-end;
+}
+
+.pis-half {
+  height: 50%;
+}
+
+.pis-par {
+  height: min-content;
+}
+
+@media (max-width: 875px) {
+  .tb-l-c-title h6 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 750px) {
+  .pis-text {
+    font-size: 24px;
+  }
+  .tb-l-c-title h6 {
+    font-size: 16px;
+  }
+}
+@media (max-width: 650px) {
+  .tb-l-c-title h6 {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 550px) {
+  .pis-text {
+    font-size: 18px;
+  }
+  .tb-l-c-title h6 {
+    font-size: 10px;
+  }
+}
+
+/*Connect / Social Media*/
+.connect-wrapper {
+  /*height: 300px;*/
+  max-width: 940px;
+  margin: auto;
+}
+
+.connect-cont {
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: space-around;
+}
+
+.hero-wrapper {
+  /*height: 300px;*/
+  margin: auto;
+  background-color: rgb(192, 164, 198);
+}
+
+.hero-cont {
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: auto;
+  padding: 5% 0 5% 0;
+}
+
+.img-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-cont {
+  font-size: 48px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-weight: 600;
+}
